kubernetes/clusters/doks/apps/uptime-kuma-cloud/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-cloud
  namespace: uptime-kuma-cloud
spec:
  selector:
    app.kubernetes.io/name: uptime-kuma-cloud
  ports:
    - name: http
      port: 80
      targetPort: http
