kubernetes/clusters/doks/apps/uptime-kuma-cloud/ingress-tailscale.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-cloud-tailscale
  namespace: uptime-kuma-cloud
spec:
  defaultBackend:
    service:
      name: uptime-kuma-cloud
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - uptime-kuma-cloud
